--- a/deb/scripts/99-repository.conf
+++ b/deb/scripts/99-repository.conf
@@ -1,19 +1,17 @@
 <VirtualHost *:80>
-	ServerName test
-	DocumentRoot /var/www/test/httpdocs
+	ServerName repository
+	DocumentRoot /var/www/repository
 	<Directory />
 		Options FollowSymLinks
 		AllowOverride None
 	</Directory>
-	<Directory /var/www/test/httpdocs>
+	<Directory /var/www/repository>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
 		Order allow,deny
 		allow from all
 	</Directory>
-
-	ErrorLog /var/www/test/log/error.log
+	ErrorLog ${APACHE_LOG_DIR}/error.log
 	LogLevel warn
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-
 </VirtualHost>
